--- a/src/pages/CheckoutPage/CheckoutPage.css
+++ b/src/pages/CheckoutPage/CheckoutPage.css
@@ -162,6 +162,7 @@
     outline: none;
     border: 1px solid #ced4da;
     padding-left: 20px;
+    margin-bottom: 20px;
 }
 
 .info-ship-input.success input{
@@ -175,11 +176,11 @@
 .info-ship-input small{
     color: #e74c3c;
     font-size: 12px;
-    visibility: hidden;
+    /* visibility: hidden; */
 }
 
 .info-ship-input.error small{
-    visibility: visible;
+    /* visibility: visible; */
 }
 
 .info-ship-input input:focus{
